# agentfusion

./: .gitignore  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-sandbox.yml  update-leaderboard.yml
agentfusion/: __init__.py  backtest.py  base.py  envs.py  registry.py
agentfusion/agents/: buy_hold.py  ensemble.py  finrl_ppo.py  trading_agents.py
arena/: .gitignore  RETROSPECTIVE.md  SCHEMA.md  compare.py
arena/adapters/finrl/: README.md  env.yml  run.py
arena/adapters/tradingagents/: README.md  env.yml  probe_single_call.py  run.py
arena/reports/2024q1/: report1_finrl_performance.md  report2_tradingagents_signals.md  report3_divergence_analysis.md
arena/results/aapl_2023h1/: finrl.json
arena/results/portfolio_2021h1_optimal/: finrl_constrained.json
arena/results/portfolio_2023h1/: finrl.json
arena/results/portfolio_2024q1/: finrl.json  (+2 more)
arena/tasks/: aapl_2023h1.json  portfolio_2024q1.json
checkpoints/finrl_ppo/: training_log.json
data/raw/: AAPL.csv  AMD.csv  AMZN.csv  GOOGL.csv  INTC.csv  META.csv  MSFT.csv  NFLX.csv  NVDA.csv  SPY.csv  TSLA.csv
examples/: community_agent.py  dummy_agent.py
results/: finrl_ppo_metrics.json  main_table.csv  signal_agreement.json  trading_agents_metrics.json
scripts/: gen_leaderboard.py  run_finrl_inference.py  run_main_table.py  run_signal_agreement.py  run_trading_agents_inference.py  train_finrl_ppo.py
signals/: _trading_agents_cost.json  finrl_ppo.csv  trading_agents.csv
tests/: test_backtest.py  test_trading_agents_retry.py
