[project]
name = "agentfusion"
version = "0.1.0"
description = "Pluggable ensemble framework for RL and LLM trading agents"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
]

[project.optional-dependencies]
rl = ["torch", "stable-baselines3", "gymnasium"]
llm = ["requests"]
analysis = ["scipy", "matplotlib"]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agentfusion"]
